--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ thefuzz = {extras = ["speedup"], version = "^0.19.0"}
 DateTime = "^4.7"
 numpy = "^1.23.3"
 py-cord = "^2.2.2"
+requests = "^2.28.1"
 
 
 [build-system]
