--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "PitBot moderation bot for Mooncord"
 authors = ["Aitor Martin <sakurazaki.setsunita@gmail.com>"]
 license = "GPL"
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
